--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   provider: ^4.0.4
+  font_awesome_flutter: ^8.5.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
