--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   provider: ^4.0.4
   font_awesome_flutter: ^8.5.0
   intl: ^0.16.1
+  http: ^0.12.0+4
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
