--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   flutter_spinkit: ^4.1.2
   shared_preferences: ^0.5.6+2
   animated_text_kit: ^2.0.0
+  image_picker: ^0.6.3+4
+  flutter_native_image: ^0.0.5+2
+  path_provider: ^1.6.5
+  firebase_storage: ^3.1.3
+
 
 
 dev_dependencies:
