--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter_native_image: ^0.0.5+2
   path_provider: ^1.6.5
   firebase_storage: ^3.1.3
+  connectivity: ^0.4.8+2
+  app_settings: ^3.0.1
+
 
 
 
